@@ -4,11 +4,13 @@ import java.util.Map.Entry;
 
 import net.minecraft.item.ItemStack;
 import net.minecraftforge.common.MinecraftForge;
+import net.minecraftforge.fml.common.network.NetworkRegistry;
 import net.minecraftforge.fml.common.registry.GameRegistry;
 import net.minecraftforge.oredict.RecipeSorter;
 import net.minecraftforge.oredict.RecipeSorter.Category;
 
 import com.hea3ven.buildingbricks.core.eventhandlers.EventHandlerOverrideBlockPlacing;
+import com.hea3ven.buildingbricks.core.gui.BuildingBricksGuiHandler;
 import com.hea3ven.buildingbricks.core.items.crafting.RecipeBindTrowel;
 import com.hea3ven.buildingbricks.core.materials.BlockDescription;
 import com.hea3ven.buildingbricks.core.materials.Material;
@@ -22,6 +24,8 @@ public class ProxyCommonBuildingBricks {
 
 	public void init() {
 		MinecraftForge.EVENT_BUS.register(new EventHandlerOverrideBlockPlacing());
+
+		NetworkRegistry.INSTANCE.registerGuiHandler(Properties.MODID, new BuildingBricksGuiHandler());
 	}
 
 	public void postInit() {
