@@ -29,8 +29,8 @@ public class BlockRotation {
 	public MaterialBlockType getNext(MaterialBlockType blockType) {
 		// TODO: Rewrite this
 		for (int i = 1; i < MaterialBlockType.values().length; i++) {
-			MaterialBlockType nextBlockType = MaterialBlockType
-					.getBlockType((blockType.ordinal() + i) % MaterialBlockType.values().length);
+			MaterialBlockType nextBlockType = MaterialBlockType.getBlockType(
+					(blockType.ordinal() + i) % MaterialBlockType.values().length);
 			if (items.containsKey(nextBlockType))
 				return nextBlockType;
 		}
@@ -40,9 +40,9 @@ public class BlockRotation {
 	public MaterialBlockType getPrev(MaterialBlockType blockType) {
 		// TODO: Rewrite this
 		for (int i = 1; i < MaterialBlockType.values().length; i++) {
-			MaterialBlockType nextBlockType = MaterialBlockType.getBlockType((blockType.ordinal()
-					+ MaterialBlockType.values().length - i)
-					% MaterialBlockType.values().length);
+			MaterialBlockType nextBlockType = MaterialBlockType.getBlockType(
+					(blockType.ordinal() + MaterialBlockType.values().length - i)
+							% MaterialBlockType.values().length);
 			if (items.containsKey(nextBlockType))
 				return nextBlockType;
 		}
@@ -59,5 +59,28 @@ public class BlockRotation {
 
 	public BlockDescription get(MaterialBlockType blockType) {
 		return items.get(blockType);
+	}
+
+	public BlockDescription get(int slotIndex) {
+		for (MaterialBlockType blockType : MaterialBlockType.values()) {
+			if (items.containsKey(blockType)) {
+				if (slotIndex-- <= 0) {
+					return items.get(blockType);
+				}
+			}
+		}
+		return null;
+	}
+
+	public int getIndex(MaterialBlockType targetBlockType) {
+		int i = 0;
+		for (MaterialBlockType blockType : MaterialBlockType.values()) {
+			if (items.containsKey(blockType)) {
+				if (blockType == targetBlockType)
+					return i;
+				i++;
+			}
+		}
+		throw new IllegalArgumentException("This block rotation does not have the target block type");
 	}
 }
