@@ -1,0 +1,5 @@
+package com.hea3ven.tools.commonutils.inventory;
+
+public interface SlotGhost {
+
+}
